--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -725,7 +725,7 @@
             <div class="footer-section">
                 <h4>Support</h4>
                 <a href="/support">Contact Support</a>
-                <a href="/upload-test">Documentation</a>
+                <a href="/docs">Documentation</a>
                 <a href="/support#faq">FAQ</a>
             </div>
             <!-- Legal -->
